Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71952

Quick Controls 2 fixes for building with qreal=float

    XMLWordPrintable

Details

    • Linux/Other display system
    • 8317e62c3e2381e6287c9a7e861d20f78aaea03f (qt/qtquickcontrols2/5.12)

    Description

      Building Quick Controls 2 with Qt configured with qreal=float fails due to some double literals in the code. Here is a diff for casting the offending literals to qreal.

      Attachments

        Activity

          People

            kleint Friedemann Kleint
            pwuertz Peter Würtz
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: