Fix compilation with qreal=float

Introduce casts where required.

Fixes: QTBUG-71952
Change-Id: I63a99d6918bc00367439e967e3c45a733b41c482
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>